[gd_scene load_steps=62 format=3 uid="uid://k6hy3xpblfo2"]

[ext_resource type="Script" path="res://Scripts/ghost.gd" id="1_0jb3i"]
[ext_resource type="Texture2D" uid="uid://dovqut03sajmu" path="res://Sprites/Bjørn/teddyfront.png" id="2_67gw5"]
[ext_resource type="Texture2D" uid="uid://cbupscqedy8ma" path="res://Sprites/Bjørn/teddysideIdel1.png" id="3_37ik1"]
[ext_resource type="Texture2D" uid="uid://b0et253olydj7" path="res://Sprites/Bjørn/Teddybackidle.png" id="4_qje25"]
[ext_resource type="Texture2D" uid="uid://nr3swj2asqvf" path="res://Sprites/Bjørn/teddyfrontshoot.png" id="5_vwdf7"]
[ext_resource type="Texture2D" uid="uid://dhqwnbi58st2j" path="res://Sprites/Bjørn/teddyshootside.png" id="6_b431y"]
[ext_resource type="Texture2D" uid="uid://bptex18xdskgw" path="res://Sprites/Bjørn/Teddythrowupv1.png" id="7_akki7"]
[ext_resource type="Texture2D" uid="uid://c6plonfd1bc22" path="res://Sprites/Bjørn/teddyfrontwalk1.png" id="8_shale"]
[ext_resource type="Texture2D" uid="uid://ci7x12uk2vv2u" path="res://Sprites/Bjørn/teddywalksid.png" id="9_21wkg"]
[ext_resource type="Texture2D" uid="uid://caufl7io57v1v" path="res://Sprites/Bjørn/teddybackwalk1.png" id="10_s0pao"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1wj5s"]
atlas = ExtResource("2_67gw5")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qpkk"]
atlas = ExtResource("2_67gw5")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu810"]
atlas = ExtResource("2_67gw5")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r4jr"]
atlas = ExtResource("2_67gw5")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xh8u"]
atlas = ExtResource("2_67gw5")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0gj6"]
atlas = ExtResource("3_37ik1")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxv3m"]
atlas = ExtResource("3_37ik1")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_njsbq"]
atlas = ExtResource("3_37ik1")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_jum6a"]
atlas = ExtResource("3_37ik1")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag1sc"]
atlas = ExtResource("3_37ik1")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg7ha"]
atlas = ExtResource("4_qje25")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_txn07"]
atlas = ExtResource("4_qje25")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7cg7"]
atlas = ExtResource("4_qje25")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_a62sv"]
atlas = ExtResource("4_qje25")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjym5"]
atlas = ExtResource("4_qje25")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_64ffb"]
atlas = ExtResource("5_vwdf7")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_caqf6"]
atlas = ExtResource("5_vwdf7")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_55efd"]
atlas = ExtResource("5_vwdf7")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uwfc"]
atlas = ExtResource("6_b431y")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta15w"]
atlas = ExtResource("6_b431y")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iehm"]
atlas = ExtResource("6_b431y")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_loqu6"]
atlas = ExtResource("6_b431y")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4brr"]
atlas = ExtResource("6_b431y")
region = Rect2(750, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_yky2f"]
atlas = ExtResource("6_b431y")
region = Rect2(900, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_a36ok"]
atlas = ExtResource("6_b431y")
region = Rect2(1050, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvhpo"]
atlas = ExtResource("7_akki7")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh0qg"]
atlas = ExtResource("7_akki7")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_no1ba"]
atlas = ExtResource("7_akki7")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0e5n"]
atlas = ExtResource("7_akki7")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3hvm"]
atlas = ExtResource("7_akki7")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_teim4"]
atlas = ExtResource("7_akki7")
region = Rect2(750, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehpv5"]
atlas = ExtResource("7_akki7")
region = Rect2(900, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf14a"]
atlas = ExtResource("8_shale")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_xldct"]
atlas = ExtResource("8_shale")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvs6m"]
atlas = ExtResource("8_shale")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dn8f"]
atlas = ExtResource("8_shale")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_p04ok"]
atlas = ExtResource("8_shale")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d5iq"]
atlas = ExtResource("9_21wkg")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8sbx"]
atlas = ExtResource("9_21wkg")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk2yu"]
atlas = ExtResource("9_21wkg")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qk3r"]
atlas = ExtResource("9_21wkg")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_37sxm"]
atlas = ExtResource("9_21wkg")
region = Rect2(600, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0vl1"]
atlas = ExtResource("10_s0pao")
region = Rect2(0, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2uxf"]
atlas = ExtResource("10_s0pao")
region = Rect2(150, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sk8d"]
atlas = ExtResource("10_s0pao")
region = Rect2(300, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnxxv"]
atlas = ExtResource("10_s0pao")
region = Rect2(450, 0, 150, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtal4"]
atlas = ExtResource("10_s0pao")
region = Rect2(600, 0, 150, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_bs2ub"]
animations = [{
"frames": [],
"loop": true,
"name": &"dance",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wj5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qpkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu810")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r4jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xh8u")
}],
"loop": true,
"name": &"idl down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0gj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxv3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njsbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jum6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag1sc")
}],
"loop": true,
"name": &"idl left right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg7ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txn07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7cg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a62sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjym5")
}],
"loop": true,
"name": &"idl up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64ffb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caqf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55efd")
}],
"loop": true,
"name": &"shoot down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uwfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta15w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loqu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4brr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yky2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a36ok")
}],
"loop": true,
"name": &"shoot left right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvhpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh0qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no1ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0e5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3hvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teim4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehpv5")
}],
"loop": true,
"name": &"shoot up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf14a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xldct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvs6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dn8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p04ok")
}],
"loop": true,
"name": &"walk down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d5iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8sbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk2yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qk3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37sxm")
}],
"loop": true,
"name": &"walk left right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0vl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2uxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sk8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnxxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtal4")
}],
"loop": true,
"name": &"walk up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_13p4w"]
radius = 373.484

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_60gcc"]
radius = 112.0
height = 224.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ylxyp"]
radius = 1.0

[node name="ghost" type="CharacterBody2D"]
script = ExtResource("1_0jb3i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.389026, 0.921421, 0.92031, 0.384314)
sprite_frames = SubResource("SpriteFrames_bs2ub")
animation = &"walk left right"
autoplay = "idl down"

[node name="detection" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 2
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
light_mask = 4
visibility_layer = 4
shape = SubResource("CircleShape2D_13p4w")

[node name="ghost hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ghost hitbox"]
shape = SubResource("CapsuleShape2D_60gcc")

[node name="invin timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ylxyp")

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="ghost hitbox" to="." method="_on_bjørn_hitbox_body_entered"]
[connection signal="body_entered" from="ghost hitbox" to="." method="_on_ghost_hitbox_body_entered"]
[connection signal="body_exited" from="ghost hitbox" to="." method="_on_ghost_hitbox_body_exited"]
[connection signal="body_exited" from="ghost hitbox" to="." method="_on_bjørn_hitbox_body_exited"]
[connection signal="timeout" from="invin timer" to="." method="_on_invin_timer_timeout"]
